- [COMPLETE] playlist.random checked
- [COMPLETE] Player.recording checked
- [COMPLETE] PVR.time/duration/progress checked
- [COMPLETE] Games settings
- [COMPLETE] New shortcuts menu for games
- [COMPLETE] DialogAddonSettings updated
- [COMPLETE] DialogPVRGroupManager.xml updated
- [COMPLETE] DialogPVRChannelManager.xml updated
- [COMPLETE] MyMusicPlaylistEditor.xml updated

[ADDON BROWSER.XML cleanup]

- check controls for new window: MyGames.xml
- new dialog: GameOSD.xml
- new dialog: Subtitles update
- musicvideos



- Screenshots etc need updating

- global search needs updating



[V1.3.3]
- [FIXED] Weather label showing on homescreen even if no weather plugin enabled.
- Minor tweaks

[V1.3.2]
- [NEW] font support for Hebrew (thanks Arthurvaverko)
- [FIXED] Mute icon (thanks Arthurvaverko)
- [FIXED] Equaliser animation can now be disabled via low power mode (thanks Kaputt3)
- [UPDATED] Unwatched item indicators on tvshow and season views
- [UPDATED] Weather returned to homescreen


[V1.3.1]
- [FIXED] back button not working correctly on plugin-based poster views
- [NEW] Homescreen menu hide function

[V1.3.0]

***Users who are upgrading from V1.2x are strongly encouraged to reset their menu structures to take account of structural changes to the skin***

- [NEW] Spotlight area removed and reintegrated into standard library views
- [NEW] Homescreen redesigned
- [NEW] Music fullscreen view redesigned
- Numerous tweaks and polishes skin wide

[V1.2.4]
- [UPDATED] French language file
- [UPDATED] Norwegian language file
- [UPDATED] Polish language file
- [UPDATED] Home screen tweaked
- [UPDATED] PVR Channel group control added to PVR section
- [FIXED] Music playlist view
- Various minor tweaks

[V1.2.3]
- [FIXED] Fullscreen music activation could hang kodi in some cases
- [FIXED] Incorrect casing on some font calls (thanks BigNoid)
- [FIXED] Audio offset blocked by dialog background (thanks PaulVT / iamgroot)