@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
     <defaultcontrol>160</defaultcontrol>
-    
     <controls>
-        <control type="image">
-            <posx>0</posx>
-            <posy>0</posy>
-            <width>fullscreenWidth</width>
-            <height>fullscreenHeight</height>
-            <aspectratio>stretch</aspectratio>
-            <texture>colors/black.png</texture>
-            <colordiffuse>eeFFFFFF</colordiffuse>
-            <include>fadeInOut</include>
-        </control>
         <control type="group" id="250">
             <posx>col-3-begin</posx>
             <posy>row-3-begin</posy>
             <!--animations-->
             <include>modalDialogInOutVertical</include>
+			<control type="image">
+                <posx>0</posx>
+                <posy>0</posy>
+                <width>20-col</width>
+                <height>23-row</height>
+                <texture>colors/black.png</texture>
+                <colordiffuse>99FFFFFF</colordiffuse>
+                <aspectratio>stretch</aspectratio>
+            </control>
             <control type="image">
                 <posx>0</posx>
                 <posy>0</posy>
                 <width>20-col</width>
-                <height>2-row</height>
+                <height>71</height>
                 <texture>colors/white.png</texture>
                 <colordiffuse>highlight</colordiffuse>
                 <aspectratio>stretch</aspectratio>
@@ -66,7 +64,7 @@
                     <height>2-row</height>
                     <aligny>center</aligny>
                     <font>itemTitle</font>
-                    <textcolor>highlight</textcolor>
+                    <textcolor>textActive</textcolor>
                     <wrapmultiline>true</wrapmultiline>
                 </control>
                 <!--subtitle file selection-->
@@ -165,7 +163,7 @@
                 <label>31134</label>
                 <ondown>150</ondown>
                 <onright>120</onright>
-                <textoffsetx>12</textoffsetx>
+                <textoffsetx>24</textoffsetx>
             </control>
             <!--subtitle service choice-->
             <control type="group">
@@ -179,9 +177,9 @@
                     <scrolltime>200</scrolltime>
                     <itemlayout width="4-col" height="2-row">
                         <control type="label">
-                            <posx>12</posx>
+                            <posx>24</posx>
                             <posy>0</posy>
-                            <width>4-col-gutter</width>
+                            <width>252</width>
                             <height>2-row</height>
                             <aligny>center</aligny>
                             <font>buttonTitle</font>
@@ -192,7 +190,7 @@
                             <visible>!ListItem.property(man)</visible>
                         </control>
                         <control type="label">
-                            <posx>12</posx>
+                            <posx>24</posx>
                             <posy>0</posy>
                             <width>4-col-gutter</width>
                             <height>2-row</height>
@@ -231,7 +229,7 @@
                         <control type="label">
                             <posx>12</posx>
                             <posy>0</posy>
-                            <width>4-col-gutter</width>
+                            <width>252</width>
                             <height>2-row</height>
                             <aligny>center</aligny>
                             <font>buttonTitle</font>
@@ -244,7 +242,7 @@
                         <control type="label">
                             <posx>12</posx>
                             <posy>0</posy>
-                            <width>4-col-gutter</width>
+                            <width>252</width>
                             <height>2-row</height>
                             <aligny>center</aligny>
                             <font>buttonTitle</font>
